# zexo

./: firebase.json  firestore.indexes.json  firestore.rules
.github/workflows/: backend-ci.yml
.kiro/hooks/: chat.hook.kiro  db.hook.kiro  feed.hook.kiro  location.hook.kiro
.kiro/specs/zexo/: design.md  (+2 more)
.kiro/steering/: conventions.md  stack.md
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  db.py  errors.py  redis.py  security.py
backend/app/migrations/: 0001_postgis_users_locations.sql  0002_chat.sql  0003_events.sql  0004_blocks.sql  0005_rls.sql  0006_pgcron_purge.sql  0007_pgcron_archive.sql  0008_gdpr_deletion.sql  0009_discovery_functions.sql
backend/app/repositories/: discover_repo.py  events_repo.py  threads_repo.py  users_repo.py
backend/app/routers/: auth.py  discover.py  events.py  threads.py  users.py
backend/app/schemas/: auth.py  chat.py  discover.py  events.py  users.py
backend/app/services/: expiry_service.py  location_service.py  moderation.py  pagination.py  ranking_service.py  ws_manager.py
backend/scripts/: migrate.py
backend/tests/: test_expiry_service.py  test_location_service.py  test_ranking_service.py
functions/: .gitignore  README.md  package.json  tsconfig.json
functions/src/: config.ts  discover.ts  events.ts  index.ts  threads.ts  triggers.ts  users.ts
functions/test/: geo.test.ts  ranking.test.ts
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  run.example.sh
mobile/lib/: main.dart
(+49 files in other folders)
