[project]
name = "zexo-api"
version = "0.1.0"
description = "Zexo — proximity-first social discovery API (FastAPI + PostGIS + Supabase)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "asyncpg>=0.29,<0.30",
    "redis>=5.0,<6",
    "pyjwt[crypto]>=2.8,<3",
    "httpx>=0.27,<0.28",
    "sentry-sdk[fastapi]>=2.7,<3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.5,<0.6",
    "black>=24.4,<25",
    "mypy>=1.10,<2",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection defaults are idiomatic, not mutable-default bugs.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
